Fix BurgerMenu overflow issue and adjust tablet menu width and margin

--- a/src/components/BurgerMenu/BurgerMenu.module.css
+++ b/src/components/BurgerMenu/BurgerMenu.module.css
@@ -204,7 +204,7 @@
 /* Tablet: slide from right, 30% width */
 @media (min-width: 768px) and (max-width: 1279px) {
   .menuContent {
-    width: 30vw;
+    width: 40vw;
     height: 100vh;
     right: 0;
     top: 0;
@@ -231,7 +231,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 32px;
+    margin-top: 120px;
     margin-bottom: 40px;
   }
   .burgerNavList {
